--- a/Session9.2/index.html
+++ b/Session9.2/index.html
@@ -488,8 +488,8 @@ where
 
 ```
                    mean         sd  0.025quant    0.5quant  0.975quant        mode          kld
-(Intercept) -0.98833298 0.11239019 -1.20942072 -0.98831791 -0.76733021 -0.98831792 1.473309e-08
-year         0.02612109 0.00058628  0.02497146  0.02612109  0.02727073  0.02612109 5.512062e-11
+(Intercept) -0.98833298 0.11238994 -1.20942022 -0.98831790 -0.76733070 -0.98831791 1.473316e-08
+year         0.02612109 0.00058628  0.02497146  0.02612109  0.02727073  0.02612109 5.527834e-11
 ```
 
 ```r
@@ -498,8 +498,8 @@ year         0.02612109 0.00058628  0.02497146  0.02612109  0.02727073  0.026121
 
 ```
                    mean        sd 0.025quant    0.5quant 0.975quant        mode          kld
-(Intercept) -1.22479524 1.8557521 -4.8996367 -1.22480739    2.45012 -1.22480612 9.030395e-08
-year         0.04083632 0.1683602 -0.2925949  0.04083756    0.37426  0.04083742 9.099426e-08
+(Intercept) -1.22479528 1.8557469 -4.8996262 -1.22480743   2.450109 -1.22480615 9.030057e-08
+year         0.04083632 0.1683598 -0.2925939  0.04083756   0.374259  0.04083742 9.099081e-08
 ```
 
 ---
@@ -508,18 +508,6 @@ year         0.04083632 0.1683602 -0.2925949  0.04083756    0.37426  0.04083742 
 
 &lt;img src="./img/comp2-1.png" &gt;
 
-
-```r
-&gt; mod1$waic$waic; mod2$waic$waic
-```
-
-```
-[1] 83781.91
-```
-
-```
-[1] 93873.31
-```
 ---
 # Model 3: space + structured time + unstructured time
 
@@ -561,8 +549,8 @@ where
 
 ```
                    mean         sd  0.025quant    0.5quant  0.975quant        mode          kld
-(Intercept) -0.98833298 0.11239019 -1.20942072 -0.98831791 -0.76733021 -0.98831792 1.473309e-08
-year         0.02612109 0.00058628  0.02497146  0.02612109  0.02727073  0.02612109 5.512062e-11
+(Intercept) -0.98833298 0.11238994 -1.20942022 -0.98831790 -0.76733070 -0.98831791 1.473316e-08
+year         0.02612109 0.00058628  0.02497146  0.02612109  0.02727073  0.02612109 5.527834e-11
 ```
 
 ```r
@@ -571,12 +559,12 @@ year         0.02612109 0.00058628  0.02497146  0.02612109  0.02727073  0.026121
 
 ```
                   mean        sd 0.025quant   0.5quant 0.975quant       mode          kld
-(Intercept) -0.7759717 0.1580244  -1.086783 -0.7759583 -0.4652365 -0.7759582 1.529714e-08
+(Intercept) -0.7759713 0.1580754  -1.086885 -0.7759578 -0.4651329 -0.7759577 1.536133e-08
 ```
 
 ---
 
-# Comparing model 1, 2 and 3: Fitted values
+# Comparing model 2 and 3: Fitted values
 
 &lt;img src="./img/comp5-1.png" &gt;
 ---
