--- a/talks/MRC2024/index.html
+++ b/talks/MRC2024/index.html
@@ -846,6 +846,8 @@ Konstantinoudis et al., Asthma hospitalisations and heat exposure in England: a 
 
 **Joan Ballester** (ISGlobal)
 
+**Paul Agnew** (MetOffice)
+
 ---
 
 # Links to papers and code
