--- a/talks/GEOMED2024/index.html
+++ b/talks/GEOMED2024/index.html
@@ -252,7 +252,7 @@ count:false
 
 --
 
-.image-6[ &lt;img src="img/COVID_Policy.png" alt="" style="width:450px;"/&gt; ]
+.image-6[ &lt;img src="img/COVIDPolicy.jpg" alt="" style="width:450px;"/&gt; ]
 
 --
 
